--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Takaaki Mizuno <takaaki.mizuno@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.6"
-podder-task-foundation = {git = "git@github.com:podder-ai/podder-task-foundation.git", rev = "main"}
+podder-task-foundation = {git = "git://github.com/podder-ai/podder-task-foundation.git", rev = "main"}
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
