--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,13 +16,20 @@ jobs:
         name: default
     steps:
       - checkout
+      - run:
+          name: Custom Settings
+          command: |
+            # ========== Custom Settings ==========
+            # Please install the libraries if necessary.
+            # For example: "sudo apt-get update && sudo apt-get install -y curl"
+            #
+            # ========== END ==========
       - restore_cache:
           key: podder-task-base-dependency-cache-{{ checksum "pyproject.toml" }}
       - run:
           name: Install requirements
           command: |
             pip install -U pip poetry setuptools
-
             poetry install
       - save_cache:
           key: v1-dependency-cache-{{ checksum "pyproject.toml" }}
