--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
-name = "podder-task-base"
+name = "{{ name }}"
 version = "0.1.0"
 description = ""
-authors = ["Takaaki Mizuno <takaaki.mizuno@gmail.com>"]
+authors = ["{{ author.name }} <{{ author.email }}>"]
 
 [tool.poetry.dependencies]
 python = "^3.6.1"
