--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["{{ author.name }} <{{ author.email }}>"]
 
 [tool.poetry.dependencies]
 python = "^3.6.2"
-podder-task-foundation = {git = "git://github.com/podder-ai/podder-task-foundation.git", rev = "main"}
+podder-task-foundation = {git = "git://github.com/podder-ai/podder-task-foundation.git"}
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
