--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,14 +5,14 @@ description = ""
 authors = ["{{ author.name }} <{{ author.email }}>"]
 
 [tool.poetry.dependencies]
-python = "^3.6.2"
+python = ">=3.7.1,<4.0.0"
 podder-task-foundation = {git = "git://github.com/podder-ai/podder-task-foundation.git"}
 
 [tool.poetry.dev-dependencies]
-pytest = "^5.2"
-isort = "^5.6.0"
-yapf = "^0.30.0"
-pytest-cov = "^2.12.1"
+pytest = "^6.2.5"
+isort = "^5.10.1"
+yapf = "^0.31.0"
+pytest-cov = "^3.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
