--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["{{ author.name }} <{{ author.email }}>"]
 
 [tool.poetry.dependencies]
 python = ">=3.7.1,<3.11"
-podder-task-foundation = {git = "git://github.com/podder-ai/podder-task-foundation.git", rev = "0.2.11"}
+podder-task-foundation = {git = "git@github.com:podder-ai/podder-task-foundation.git", rev = "0.2.14"}
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
@@ -17,3 +17,4 @@ pytest-cov = "^3.0.0"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
