--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,18 @@
 [tool.poetry]
-name = "{{ name }}"
-version = "0.0.1"
+name = "podder-task-base"
+version = "0.1.0"
 description = ""
 authors = ["{{ author.name }} <{{ author.email }}>"]
 
 [tool.poetry.dependencies]
-python = ">=3.7.1,<3.11"
-podder-task-foundation = {git = "git@github.com:podder-ai/podder-task-foundation.git", rev = "0.2.14"}
+python = ">=3.8, <4.0"
+podder-task-foundation = {git = "https://github.com/podder-ai/podder-task-foundation.git", rev = "0.2.17"}
 
 [tool.poetry.dev-dependencies]
-pytest = "^6.2.5"
+pytest = "^7.2.0"
 isort = "^5.10.1"
-yapf = "^0.31.0"
-pytest-cov = "^3.0.0"
+yapf = "^0.32.0"
+pytest-cov = "^4.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
